[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "binance-mcp"
version = "1.0.0"
description = "Advanced Binance trading MCP server with backtesting, risk management, and real-time dashboard"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "aiohttp>=3.9.5",
    "aiosqlite>=0.20.0",
    "cryptography>=42.0.5",
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "mcp>=1.3.0",
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "pydantic>=2.7.1",
    "python-binance>=1.0.19",
    "requests>=2.31.0",
    "uvicorn>=0.29.0",
    "websockets>=12.0",
]

[project.scripts]
binance-mcp = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["binance_mcp*", "core*", "exchange*", "risk*", "backtesting*", "mcp*", "dashboard*", "notifications*", "utils*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
